--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
      </div>
 
      <div class="header2">
-      <h2 class="titel">Who We Are</h2>
-      <p class="paragraf"> We are team of creatifly diverse, driven, innovative individuals working in various locations from the world.</p>
+      <h2>Who We Are</h2>
+      <p> We are team of creatifly diverse, driven, innovative individuals working in various locations from the world.</p>
      </div>
 
   </header>
